adjusted css and js to fit wordpress, looks good on screen, but still issue on mobile devices due to wordpress white padding on iframe

--- a/jaffe-chart.css
+++ b/jaffe-chart.css
@@ -115,8 +115,6 @@ body {
 
 
 #inflate_btn {
-    //width: 220px;
-    //height: 42px;
     font-size: 20px;
     border: 1px black solid;
     /*border-right: 0;*/
@@ -137,23 +135,18 @@ body {
     /*margin-left: 10px;
     margin-right: 10px;
     margin-top: 0px;*/
-    margin:0;
-    padding: 5px;
+    margin:0 !important;
+    padding: 0px 0px 0px 4px !important;
     border-left: 1px black solid;
     border-right: 1px black solid;
     border-bottom: 1px black solid;
     border-top: 1px black solid;
-    width: 38px;
-    height: 20px;
+    width: 34px;
     font-size: 20px;
     display: table-cell;
     border-radius: 5px;
     /* background-color: rgba(255, 255, 255, 0.1); */
     color: #000000;
-}
-
-.text {
-  grid-area: text;
 }
 
 
@@ -169,9 +162,7 @@ canvas {
 header {
   font-family: 'Oswald', sans-serif;
   font-size:45px;
-  //font-weight:bold;
   letter-spacing: 5px;
-  //font-weight:800;
   text-transform: uppercase;
   font-style:normal !important;
   margin:0 !important;
@@ -188,23 +179,12 @@ header {
 .content {
     grid-area: main;
     margin-bottom:-20px;
-    //margin-bottom:5px;
+    margin-top:5px;
 
 }
 .sidebar {
-    grid-area: sd;
+    margin-left: 6%;
 }
-
-/*#footer {
-  display:none;
-  text-align:justify;
-  position:fixed;
-  bottom:300px;
-  width:450px;
-  background-color: rgba(255, 0, 0, 0.2);
-  padding:10px;
-  left:10%;
-}*/
 
 #footer {
   display:none;
@@ -224,31 +204,9 @@ header {
   line-height: normal;
 }
 
-#footer_blank {
-  grid-area:ft;
-  //display:none;
-  text-align:justify;
-  //position:absolute;
-  //bottom:495px;
-  //left:455px;
-  //padding:10px;
-  font-size:1px;
-  width:670px;
-  //font-family:Verdana;
-
-  color: #007ae5;
-  background-color: #fffde5;
-  width:685px;
-  text-shadow:none;
-  //padding-left:5px;
-  border-radius:10px;
-}
 
 #footer span {
   font-size: 18px;
-  //border-right:1px black solid;
-  //border-top:1px black solid;
-  //border-bottom: 1px black solid;
   padding:1px;
   background-color:#fff;
   color: #fc0202;
@@ -262,18 +220,8 @@ header {
 }
 
 p {
-  //margin-top:120px;
-  //background-color: rgba(0, 0, 255, 0.2);
-  //border:1px rgba(245, 0, 0, 0.2) solid;
   padding:15px 20px;
   padding-left:5px;
   margin:0;
   margin-bottom:50px;
-}
-
-
-
-
-div {
-  //border: 1px solid black;
 }
